<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="MemberShipViewModel"
            type="dp.com.amarapp.viewmodel.MemberShipViewModel"/>
    </data>


<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_copy">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_layout"
        />

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/dp106h"
        android:textStyle="bold"
        android:text="@string/choce_membership"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp13" />
    <TextView
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choce_membership_2"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:textColor="@color/text_color_black"
        android:textStyle="bold"
        android:textSize="@dimen/sp13"
        />
    <Button
        android:layout_width="@dimen/dp150h"
        android:layout_height="@dimen/dp36w"
        android:background="@drawable/button_shape"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text"
        android:layout_marginTop="@dimen/dp36w"
        android:textStyle="bold"
        android:text="@string/company_membership"
        android:textSize="@dimen/sp15"
        android:textColor="@color/text_color"
        android:padding="@dimen/dp9h"
        android:onClick="@{MemberShipViewModel::company}"
        android:id="@+id/company"
        />
    <Button
        android:layout_width="@dimen/dp150h"
        android:layout_height="@dimen/dp36w"
        android:background="@drawable/button_shape"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/company"
        android:layout_marginTop="@dimen/dp36h"
        android:text="@string/client_membership"
        android:textStyle="bold"
        android:textSize="@dimen/sp15"
        android:textColor="@color/text_color"
        android:padding="@dimen/dp9h"
        android:onClick="@{MemberShipViewModel::client}"
        android:id="@+id/person"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip_login"
        android:textColor="@color/text_color_black"
        android:textSize="@dimen/sp10"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:onClick="@{MemberShipViewModel::home}"
        android:layout_marginBottom="@dimen/dp9h"/>
</RelativeLayout>
</layout>