<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="ClientSettingsViewModel"
            type="dp.com.amarapp.viewmodel.ClientSettingsViewModel"/>
    </data>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/back_ground_gray"
        android:layout_marginTop="13dp"/>
    <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:textSize="11.7sp"
    android:textColor="@color/text_color_black"
    android:lineSpacingExtra="-5.7sp"
    android:text="@string/user_name"
    android:paddingEnd="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={ClientSettingsViewModel.name}" />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/back_ground_gray"
        android:layout_marginTop="13dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:textColor="@color/text_color_black"
        android:lineSpacingExtra="-5.7sp"
        android:text="@string/mail_address"
        android:paddingEnd="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={ClientSettingsViewModel.mail}"
        android:gravity="right"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/back_ground_gray"
        android:layout_marginTop="13dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:textColor="@color/text_color_black"
        android:lineSpacingExtra="-5.7sp"
        android:text="@string/phone_no"
        android:paddingEnd="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={ClientSettingsViewModel.phone}"
        android:gravity="right"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/back_ground_gray"
        android:layout_marginTop="13dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:textColor="@color/text_color_black"
        android:lineSpacingExtra="-5.7sp"
        android:text="@string/country"
        android:paddingEnd="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="السعوديه"
        android:gravity="right"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/back_ground_gray"
        android:layout_marginTop="13dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:textColor="@color/text_color_black"
        android:lineSpacingExtra="-5.7sp"
        android:text="@string/city"
        android:paddingEnd="5dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="الرياض"
        android:gravity="right"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/back_ground_gray"
        android:layout_marginTop="13dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="11.7sp"
        android:textColor="@color/text_color_black"
        android:lineSpacingExtra="-5.7sp"
        android:text="@string/password"
        android:paddingEnd="5dp"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@={ClientSettingsViewModel.password}"
        android:gravity="right"
        android:inputType="textPassword"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/arrow_down_sign_to_navigate"
            android:layout_marginLeft="10dp"
            android:onClick="@{ClientSettingsViewModel::changePassword}"/>
    </RelativeLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/back_ground_gray"
        android:layout_marginTop="13dp"/>
    <Button
        android:layout_width="255dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/button_shape"
        android:text="@string/log_out"
        android:layout_marginTop="58dp"
        android:backgroundTint="@color/text_color"
        android:onClick="@{ClientSettingsViewModel::logOut}"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="7.2sp"
    android:textColor="@color/text_color_black"
    android:lineSpacingExtra="1.2sp"
    android:gravity="center_horizontal"
    android:text= "@string/version"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/developed_by"
        android:textSize="7.2sp"
        android:textColor="@color/text_color_black"
        android:lineSpacingExtra="1.2sp"
        android:layout_gravity="center"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/logoform"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"/>


</LinearLayout>
</layout>