<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="ActivationViewModel"
            type="dp.com.amarapp.viewmodel.ActivationViewModel"/>
    </data>
<RelativeLayout
    android:id="@+id/rl_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_copy">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/client"
        android:textSize="14dp"
        android:textColor="@color/text_color_black"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        android:id="@+id/text1"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{ActivationViewModel.name}"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/text1"
        android:id="@+id/name"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/go_to_mail"
        android:layout_below="@id/name"
        android:textColor="#000000"
        android:textSize="14dp"
        android:id="@+id/text2"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/go_to_mail_2"
        android:layout_below="@id/text2"
        android:textColor="#000000"
        android:textSize="14dp"
        android:id="@+id/text3"/>

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        app:lottie_autoPlay="true"
        app:lottie_fileName="activation.json"
        app:lottie_loop="true"
        android:id="@+id/lottie"/>
    <Button
        android:background="@drawable/button_shape"
        android:layout_width="@dimen/dp149w"
        android:layout_height="@dimen/dp36h"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/lottie"
        android:layout_marginTop="40dp"
        android:text="@string/send_new_mail"
        android:textSize="@dimen/sp15"
        android:textColor="@color/text_color"
        android:id="@+id/send_new_mail"
        android:onClick="@{ActivationViewModel::sendNewMail}"/>
    <Button
        android:background="@drawable/button_shape"
        android:layout_width="@dimen/dp149w"
        android:layout_height="@dimen/dp36h"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/send_new_mail"
        android:layout_marginTop="25dp"
        android:textSize="@dimen/sp15"
        android:textColor="@color/text_color"
        android:text="@string/active_with_phone"
        android:id="@+id/acctive_phone"
        android:onClick="@{ActivationViewModel::activeUsingPhone}"/>
</RelativeLayout>
</layout>