<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="CodeViewModel"
            type="dp.com.amarapp.viewmodel.ActivationCodeViewModel"/>
    </data>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/ll_parent"
    android:background="@mipmap/bg_copy">
    <ImageView
        android:layout_width="@dimen/dp77w"
        android:layout_height="@dimen/dp68h"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/dp73h"
        android:src="@mipmap/logo" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp52h"
        android:layout_gravity="center_horizontal"
        android:text="@string/enter_activation_code"
        android:textSize="@dimen/sp12_5"
        android:textStyle="bold"
        android:textColor="@color/text_color_black" />
    <EditText
        android:layout_width="@dimen/dp149w"
        android:layout_height="@dimen/dp36h"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/edit_text_shape"
        android:layout_marginTop="@dimen/dp69h"
        android:textColorHint="@color/text_color"
        android:hint="@string/activation_code"
        android:gravity="end|center"
        android:textDirection="locale"
        android:paddingEnd="7dp"
        android:paddingStart="7dp"
        android:textColor="@color/text_color"
        android:inputType="phone"
        android:text="@={CodeViewModel.code}"/>
    <Button
        android:layout_width="@dimen/dp149w"
        android:layout_height="@dimen/dp36h"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_shape"
        android:layout_marginTop="@dimen/dp61h"
        android:textColor="@color/text_color"
        android:text="@string/active"
        android:textSize="@dimen/sp15"
        android:onClick="@{CodeViewModel::checkEmptyData}"/>
</LinearLayout>
</layout>
